--- a/src/Menu.html
+++ b/src/Menu.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
 
-</body>
+   <head>
+      <title>TiendaGenerica</title>
+      <link href="tienda.css" rel="stylesheet" type="text/css"/>
+   </head>
+	
+   <body>
+       
+      <form >
+          <table>
+              <tr>
+                  <td colspan="2" >Bienvenidos a la tienda generica</td>
+              </tr>
+              <tr>
+                  <td>Usuario:</td>
+                  <td><input type = "text" name = "user_id" class = "fondo" /></td>
+              </tr>
+              <tr>
+                  <td>Contraseña:</td>
+                  <td><input type = "password" name = "password" class = "fondo"/></td>
+              </tr>
+              
+              <tr>
+                  <td><input type = "button" name = "Aceptar" value = "Aceptar" class = "redondeado"/></td>
+                  <td><input type = "reset" name = "Cancelar" value = "Cancelar" class = "redondeado"/></td>
+              </tr>
+          </table>
+      </form>
+   </body>
+	
 </html>
