--- a/src/Menu.html
+++ b/src/Menu.html
@@ -2,7 +2,7 @@
 <html>
 
    <head>
-      <title>TiendaGenerica</title>
+      <title>TiendaGeneric</title>
       <link href="tienda.css" rel="stylesheet" type="text/css"/>
    </head>
 	
@@ -18,7 +18,7 @@
                   <td><input type = "text" name = "user_id" class = "fondo" /></td>
               </tr>
               <tr>
-                  <td>ContraseÃ±a:</td>
+                  <td>Contraseña:</td>
                   <td><input type = "password" name = "password" class = "fondo"/></td>
               </tr>
               
